# fiadtui

./: Cargo.toml  LICENSE.txt  README.md
examples/: counter.rs  delayed_counter.rs  tick.rs
src/: app.rs  error.rs  lib.rs  message.rs
